# dxlab-which-way-the-wind-blows

./: .gitignore  README.md
data-gen/: index.js  package.json
nannou-fluid-sim/: Cargo.toml
nannou-fluid-sim/src/: main.rs
public/: index.html
public/css/: style.css  videojs.markers.css
public/js/: app.js  videojs-markers.js
