[package]
name = "nannou-fluid-sim"
version = "0.1.0"
authors = ["Harry Morris <harry@small.mu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.15"
geo = { git = "https://github.com/harrythemorris/geo", branch="fix-bug-in-concave-hull" }
dbscan = "0.2.0"
serde = "1.0"
serde_json = "1.0"